--- a/templates/emails/rejet.html.twig
+++ b/templates/emails/rejet.html.twig
@@ -151,7 +151,7 @@
                                         Bonjour {{ visite.prenomVisiteur }} {{ visite.nomVisiteur }},
                                         <br><br>
                                         <i style="font-size: .9rem"> La réponse suite à votre demande: </i> <br> <br>
-                                        {{ visite.reponse }}
+                                        Votre demande a été rejetée car vous-êtes connu(e) au fichier de la Fonction publique.
                                     </div>
                                 </td>
                             </tr>
