--- a/templates/rejet.html.twig
+++ b/templates/rejet.html.twig
@@ -151,10 +151,7 @@
                                         Bonjour {{ visite.prenomVisiteur }} {{ visite.nomVisiteur }},
                                         <br><br>
                                         <i style="font-size: .9rem"> La réponse suite à votre demande: </i> <br> <br>
-                                        Votre demande a été validée.
-                                        <br><br>
-                                        Merci de vous presenter au Ministère de la Fonction publique, sise á Dakar-Plateau - 52 rue Vincens x Abdou Karim Bourgi,
-                                        au premier étage á droite, auprès de Monsieur NIANG. 
+                                        {{ visite.reponse }}
                                     </div>
                                 </td>
                             </tr>
