--- a/templates/visite/edit.html.twig
+++ b/templates/visite/edit.html.twig
@@ -118,9 +118,10 @@
 
             <div id="bottom-wizard">
                 <button type="submit" class="submit" name="submitAction" value="valider" >Valider la demande</button>
-                <a href="{{ path('visite_rejet', {'id': visite.id}) }}" class="reset">Rejeter la demande</a>
             </div>
-
+            <div id="bottom-rejet">
+                <button class="rejet" align = 'left' name="rejetAction" <a href="{{ path('visite_rejet', {'id': visite.id}) }}" >Rejeter la demande</a></button>
+            </div>
             <div style="display: none;">
                 {{ form_widget(form.region) }}
                 {{ form_widget(form.departement) }}
