--- a/public/css/style.css
+++ b/public/css/style.css
@@ -654,6 +654,25 @@ button.submit {
     padding: 10px 30px
 }
 
+button.rejet {
+    border: none;
+    color: #fff;
+    transition: background .5s ease;
+    -moz-transition: background .5s ease;
+    -webkit-transition: background .5s ease;
+    -o-transition: background .5s ease;
+    display: inline-block;
+    min-width: 110px;
+    background: rgb(228, 59, 8);
+    position: relative;
+    font-size: 15px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    line-height: 1;
+    padding: 10px 30px
+}
+
 button.backward:before,
 button.forward:before,
 a.forward:before,
@@ -712,6 +731,11 @@ button.submit:before {
 }
 
 #bottom-wizard {
+    padding: 30px 0 45px;
+    text-align: center
+}
+
+#bottom-rejet {
     padding: 30px 0 45px;
     text-align: center
 }
