--- a/templates/visite/show.html.twig
+++ b/templates/visite/show.html.twig
@@ -55,9 +55,9 @@
                     </tbody>
                 </table>
 
-                <a class="btn" href="{{ path('visite_index') }}">Retour à la liste</a>
+                <a class="btn" align ='right' href="{{ path('visite_index') }}">Retour à la liste</a>
                 
-                <a class="btn btn-primary" href="{{ path('visite_rejet', {'id': visite.id}) }}">Rejeter la demande</a>
+                <a class="btn btn-danger" href="{{ path('visite_rejet', {'id': visite.id}) }}">Rejeter la demande</a>
 
                 <a class="btn btn-primary" href="{{ path('visite_edit', {'id': visite.id}) }}">Traiter la demande</a>
 
