--- a/templates/visite/attestation.html.twig
+++ b/templates/visite/attestation.html.twig
@@ -13,9 +13,9 @@
     &nbsp;&nbsp;&nbsp;&nbsp;</span></em><em><span style="font-family:'Bookman Old Style';">
     Un Peuple &ndash;  But &ndash; Une Foi</span></em> <span style="font-family:Tahoma;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;N&deg;</span><strong><span style="font-family:'Bookman Old Style'; font-size:11pt;">
-    {% set datenow = date('now' | date ('d-m-y')) %}
-    {{ datenow | date('m') }}{{ datenow | date('y')}} DNAFP 000{{ visite.id }}</span></strong><em><span style="font-family:'Bookman Old Style'; font-size:11pt;">
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;N&deg;</span><strong><span style="font-family:'Bookman Old Style'; font-size:11pt;">
+    {% set datenow = date('now' | date ('d-m-Y')) %}
+    {{ datenow | date('m') }}{{ datenow | date('Y')}} DNAFP 000{{ visite.id }}</span></strong><em><span style="font-family:'Bookman Old Style'; font-size:11pt;">
     </span></em></p>
     
     <p style="margin-top:0pt; margin-bottom:8pt; font-size:12pt;"><span style="font-family:'Bookman Old Style';">
@@ -61,7 +61,6 @@
     <span style="font-family:Tahoma;">P. Le Directeur g&eacute;n&eacute;ral</span></strong></p>
     <p style="margin-top:0pt; margin-left:293.2pt; margin-bottom:0pt; text-align:center; font-size:13pt;">
     <span style="font-family:Tahoma;">P.O. Le charg&eacute; d&rsquo;Etudes</span></p>
-    <p style="margin-top:0pt; margin-bottom:0pt; font-size:14pt;"><span style="font-family:'Times New Roman';">&nbsp;</span></p>
     <p style="margin-top:0pt; margin-bottom:0pt; font-size:14pt;"><span style="font-family:'Times New Roman';">&nbsp;</span></p>
     <p style="margin-top:0pt; margin-bottom:0pt; font-size:14pt;"><span style="font-family:'Times New Roman';">&nbsp;</span></p>
     <p style="margin-top:0pt; margin-bottom:0pt; font-size:14pt;"><span style="font-family:'Times New Roman';">&nbsp;</span></p>
