--- a/templates/visite/edit.html.twig
+++ b/templates/visite/edit.html.twig
@@ -118,7 +118,9 @@
 
             <div id="bottom-wizard">
                 <button type="submit" class="submit" name="submitAction" value="valider" >Valider la demande</button>
+                <a class="btn btn-dark" href="{{ path('visite_index') }}"> Retour à la liste des demandes</a>
             </div>
+            
         <!--
            <div id="bottom-rejet">
                 <button class="rejet" align = 'left' name="rejetAction" <a href="{{ path('visite_rejet', {'id': visite.id}) }}" >Rejeter la demande</a></button>
