--- a/templates/visite/show.html.twig
+++ b/templates/visite/show.html.twig
@@ -55,7 +55,7 @@
                     </tbody>
                 </table>
 
-                <a class="btn" align ='right' href="{{ path('visite_index') }}">Retour à la liste</a>
+                <a class="btn btn-dark" align ='right' href="{{ path('visite_index') }}">Retour à la liste</a>
                 
                 <a class="btn btn-danger" href="{{ path('visite_rejet', {'id': visite.id}) }}">Rejeter la demande</a>
 
