--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -89,7 +89,7 @@
         if (message) {
             Swal.fire(
                 '',
-                "Votre demande est bien reçue, une réponse par e-mail vous sera communiquée dans les plus bref délais.",
+                "Félicitations! Votre demande est bien prise en compte. Merci de vous présenter au Ministère de la Fonction Publique muni de votre pièce d'identité.",
                 'success'
             )
         }
